--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,16 @@ AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+
+[compat]
+AutoHashEquals = "0.2.0"
+Catlab = "0.7.0"
+DataFrames = "0.21.0"
+LibPQ = "1.4.0"
+julia = "1.0"
+
+[extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
