--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 
 [compat]
 AutoHashEquals = "0.2.0"
-Catlab = "0.7.2"
+Catlab = "^0.8"
 DataFrames = "0.21.0"
 LibPQ = "1.4.0"
 julia = "1.0"
