--- a/Project.toml
+++ b/Project.toml
@@ -4,13 +4,13 @@ authors = ["bosonbaas <bosonbaas@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+AlgebraicPetri = "4f99eebe-17bf-4e98-b6a1-2c4f205a959b"
 AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 Octo = "16905944-f982-529b-abb2-b839f98f160b"
-Petri = "4259d249-1051-49fa-8328-3f8ab9391c33"
 
 [compat]
 AutoHashEquals = "0.2.0"
