--- a/Project.toml
+++ b/Project.toml
@@ -11,10 +11,10 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 
 [compat]
+AlgebraicPetri = "0.5.1"
 AutoHashEquals = "0.2.0"
 Catlab = "^0.9"
 DataFrames = "0.21.0"
-
 LibPQ = "1.4.0"
 julia = "1.0"
 
