Added scheduling capabilities with tests

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.2.1"
 AlgebraicPetri = "4f99eebe-17bf-4e98-b6a1-2c4f205a959b"
 AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+Dagger = "d58978e5-989f-55fb-8d15-ea34adc7bf54"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 
@@ -14,6 +15,7 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 AlgebraicPetri = "0.5.1"
 AutoHashEquals = "0.2.0"
 Catlab = "^0.9"
+Dagger = "0.10.2"
 DataFrames = "0.21.0"
 LibPQ = "1.4.0"
 julia = "1.0"
