--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 AlgebraicPetri = "0.6"
 AutoHashEquals = "0.2.0"
 Catlab = "0.11, 0.12"
-DataFrames = "0.2, 1.0"
+DataFrames = "0.21, 0.22, 1.0"
 LibPQ = "1.4.0"
 julia = "1.0"
 
