--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,9 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 
 [compat]
-AlgebraicPetri = "0.6"
+AlgebraicPetri = "0.6, 0.7"
 AutoHashEquals = "0.2.0"
-Catlab = "0.11, 0.12"
+Catlab = "0.13"
 DataFrames = "0.21, 0.22, 1.0"
 LibPQ = "1.4.0"
 julia = "1.0"
