--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        julia-version: ['1.0', '1.3', '1.6']
+        julia-version: ['1.6']
         os: [ubuntu-latest]
 
     steps:
