--- a/Project.toml
+++ b/Project.toml
@@ -4,15 +4,15 @@ authors = ["bosonbaas <bosonbaas@gmail.com>"]
 version = "0.3.1"
 
 [deps]
-AlgebraicPetri = "4f99eebe-17bf-4e98-b6a1-2c4f205a959b"
-AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-AlgebraicPetri = "0.6, 0.7"
-AutoHashEquals = "0.2.0"
 Catlab = "0.14"
 DataFrames = "1.0"
 LibPQ = "1.4.0"
