--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 
 [compat]
 AlgebraicPetri = "0.6, 0.7"
-AutoHashEquals = "0.2.0"
+AutoHashEquals = "0.2.0, 1"
 Catlab = "0.14"
 DataFrames = "1.0"
 LibPQ = "1.4.0"
