--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,13 @@ authors = ["bosonbaas <bosonbaas@gmail.com>"]
 version = "0.3.1"
 
 [deps]
+ACSets = "227ef7b5-1206-438b-ac65-934d6da304b8"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
@@ -25,8 +27,10 @@ MySQLACSetsExt = "MySQL"
 SQLiteAlgRelExt = "SQLite"
 
 [compat]
+ACSets = "0.2.21"
 Catlab = "0.16"
 DataFrames = "1.0"
+MLStyle = "0.4.17"
 Reexport = "1.2.2"
 SQLite = "1.6.1"
 julia = "1.6"
