--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "0.3.1"
 [deps]
 ACSets = "227ef7b5-1206-438b-ac65-934d6da304b8"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
+MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
@@ -18,7 +20,6 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 [weakdeps]
 DuckDB = "d2f5444f-75bc-4fdf-ac35-56f514c445e1"
 LibPQ = "2196b101-3ac0-4e12-b5a8-532424305d17"
-MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 
 [extensions]
 DuckDBAlgRelExt = "DuckDB"
@@ -29,8 +30,10 @@ SQLiteAlgRelExt = "SQLite"
 [compat]
 ACSets = "0.2.21"
 Catlab = "0.16"
+DBInterface = "2.6.1"
 DataFrames = "1.0"
 MLStyle = "0.4.17"
+MySQL = "1.4.7"
 Reexport = "1.2.2"
 SQLite = "1.6.1"
 julia = "1.6"
