fixed and/or parsing

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ACSets = "227ef7b5-1206-438b-ac65-934d6da304b8"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
@@ -32,6 +33,9 @@ ACSets = "0.2.21"
 Catlab = "0.16"
 DBInterface = "2.6.1"
 DataFrames = "1.0"
+Dates = "1.11.0"
+MLStyle = "0.4.17"
+MySQL = "1.4.7"
 Reexport = "1.2.2"
 SQLite = "1.6.1"
 julia = "1.6"
