--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
+Gumbo = "708ec375-b3d6-5a57-a7ce-8257bf98657a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
@@ -38,6 +39,7 @@ Catlab = "0.16"
 DBInterface = "2.6.1"
 DataFrames = "1.0"
 Dates = "1.11.0"
+Gumbo = "0.8.3"
 HTTP = "1.10.15"
 JSON3 = "1.14.1"
 MLStyle = "0.4.17"
