--- a/Project.toml
+++ b/Project.toml
@@ -16,8 +16,10 @@ JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
+StructEquality = "6ec83bb0-ed9f-11e9-3b4c-2b04cb4e219c"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [weakdeps]
@@ -38,8 +40,10 @@ HTTP = "1.10.15"
 JSON3 = "1.14.1"
 MLStyle = "0.4.17"
 MySQL = "1.4.7"
+OrderedCollections = "1.8.1"
 Reexport = "1.2.2"
 SQLite = "1.6.1"
+StructEquality = "2.1.0"
 julia = "1.6"
 
 [extras]
