--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 StructEquality = "6ec83bb0-ed9f-11e9-3b4c-2b04cb4e219c"
@@ -41,6 +42,7 @@ JSON3 = "1.14.1"
 MLStyle = "0.4.17"
 MySQL = "1.4.7"
 OrderedCollections = "1.8.1"
+PrettyTables = "2.4"
 Reexport = "1.2.2"
 SQLite = "1.6.1"
 StructEquality = "2.1.0"
