--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 StructEquality = "6ec83bb0-ed9f-11e9-3b4c-2b04cb4e219c"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TraitInterfaces = "228235be-7709-4868-9089-276e3dee9f94"
 
 [weakdeps]
 DuckDB = "d2f5444f-75bc-4fdf-ac35-56f514c445e1"
@@ -46,6 +47,7 @@ PrettyTables = "2.4"
 Reexport = "1.2.2"
 SQLite = "1.6.1"
 StructEquality = "2.1.0"
+TraitInterfaces = "0.1.0"
 julia = "1.6"
 
 [extras]
